# bt3

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bench-baseline.txt  bench-compare.py  bench-compare.sh  bench-new.txt  bench-run.sh  libternary.shar
.cargo/: config.toml
.github/workflows/: bench.yml  rust.yml
benches/: bench.rs
src/: conversions.rs  digit.rs  getrandom.rs  lib.rs  matrix.rs  operations.rs  store.rs  terscii.rs  tryte.rs
tests/: bench.rs
tests/examples/: hello.rs  stores.rs
