[package]
name = "balanced-ternary"
description = "A library to manipulate balanced ternary values."
authors = ["Sébastien GELDREICH <trehinos@gmail.com>"]
version = "2.1.0"
edition = "2021"
license = "MIT"
keywords = ["ternary", "balanced_ternary", "base3", "three_value_logic", "logic"]
categories = ["data-structures", "mathematics", "science", "no-std"]
repository = "https://github.com/h8d13/bt3"

[features]
default = ["tryte", "ternary-store", "terscii", "getrandom"]
ternary-store = ["ternary-string"]
tryte = ["ternary-string"]
ternary-string = []
terscii = ["ternary-string", "tryte"]
# Linux-only: getrandom(2) syscall for no_std entropy (x86_64 / aarch64)
getrandom = []

[[test]]
name = "hello"
path = "tests/examples/hello.rs"
harness = false

[[bench]]
name = "bench"
harness = false

# cargo bench uses the bench profile — fat LTO for maximum cross-crate
# inlining so benchmarks reflect true optimized performance.
# cargo test --release --doc uses release profile (lto=false in config.toml)
# which avoids the LLVM context-destructor stack overflow with fat LTO.
[profile.bench]
inherits = "release"
lto = "fat"

# Align all function entry points AND all non-fallthrough block targets
# (loop headers, branch targets) to 64-byte cache line boundaries.

# -align-all-functions=64         : function entries always cache-line aligned
# -align-all-nofallthru-blocks=64 : loop headers/branch targets always aligned

# Together these prevent LTO layout shifts from moving hot inner loops to
# bad cache-line positions when any function's code size changes.
[build]
rustflags = [
  "-C", "llvm-args=-align-all-functions=64",
  "-C", "llvm-args=-align-all-nofallthru-blocks=64",
]

[profile.release]
lto = false
strip = "symbols"

[dev-dependencies]
divan = "0.1"

[dependencies]
