[package]
name = "balanced-ternary"
description = "A library to manipulate balanced ternary values."
authors = ["Sébastien GELDREICH <trehinos@gmail.com>"]
version = "2.1.0"
edition = "2021"
license = "MIT"
keywords = ["ternary", "balanced_ternary", "base3", "three_value_logic", "logic"]
categories = ["data-structures", "mathematics", "science", "no-std"]
repository = "https://github.com/h8d13/bt3"

[features]
default = ["tryte", "ternary-store", "terscii", "getrandom"]
ternary-store = ["ternary-string"]
tryte = ["ternary-string"]
ternary-string = []
terscii = ["ternary-string", "tryte"]
# Linux-only: getrandom(2) syscall for no_std entropy (x86_64 / aarch64)
getrandom = []

[[test]]
name = "hello"
path = "tests/examples/hello.rs"
harness = false

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = false
strip = "symbols"

[dev-dependencies]
divan = "0.1"

[dependencies]
