[package]
name = "balanced-ternary"
description = "A library to manipulate balanced ternary values."
authors = ["Sébastien GELDREICH <trehinos@gmail.com>"]
version = "2.1.0"
edition = "2021"
license = "MIT"
keywords = ["ternary", "balanced_ternary", "base3", "three_value_logic", "logic"]
categories = ["data-structures", "mathematics", "science", "no-std"]
repository = "https://github.com/h8d13/bt3"

[features]
default = ["tryte", "ternary-store", "terscii", "getrandom"]
ternary-store = ["ternary-string"]
ternary-matrix = ["ternary-store"]
tryte = ["ternary-string"]
terscii = ["ternary-string", "tryte"]
ternary-string = []
getrandom = []

[[test]]
name = "hello"
path = "tests/examples/hello.rs"
harness = false

[profile.release]
lto = false
strip = "symbols"

[dependencies]
